--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,10 @@
   "name": "react1",
   "version": "0.0.0",
   "dependencies": {
-    "react": "^15.3.2"
+    "react": "^15.3.2",
+    "babel": "^5.8.38",
+    "jquery": "^3.1.1",
+    "remarkable": "^1.7.0"
   },
   "appPath": "public"
 }
